--- a/b-n-cafe/public/index.html
+++ b/b-n-cafe/public/index.html
@@ -28,12 +28,10 @@
   </head>
   <body>
     <header>
+      <h1>Welcome</h1>
+        </header>
       <noscript>You need to enable JavaScript to run this app.</noscript>
       <div id="root">
-        <Router>
-          <Switch>
-            <Route exact path="/" component={Layout} />
-        </Router>
       </div>
       <!--
         This HTML file is a template.
@@ -45,6 +43,5 @@
         To begin the development, run `npm start` or `yarn start`.
         To create a production bundle, use `npm run build` or `yarn build`.
       -->
-    </header>
   </body>
 </html>
